monitoring/overlays/osaka0/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: topolvm-provisioner
        resources:
          requests:
            storage: 10Gi
