monitoring/overlays/osaka0/grafana/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  virtualhost:
    fqdn: grafana.monitoring.osaka0.cybozu-ne.co
    tls:
      secretName: grafana-tls
  routes:
    - conditions:
        - prefix: /
      timeoutPolicy:
        response: 2m
      services:
        - name: grafana
          port: 80
