monitoring/overlays/osaka0/grafana/ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  virtualhost:
    fqdn: grafana.monitoring.osaka0.cybozu-ne.co
    tls:
      secretName: grafana-tls
  routes:
    - match: /
      timeoutPolicy:
        request: 2m
      services:
        - name: grafana
          port: 80
